--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css" />
 
 </head>
-<body>
+<body style = "margin : 0px;">
   <app-root></app-root>
 </body>
 </html>
