--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css" />
-
+<link rel="stylesheet" type="text/css" href=".theme.scss">
 </head>
-<body style = "margin : 0px;">
+<body class="theme" style = "margin : 0px;">
   <app-root></app-root>
 </body>
 </html>
